[tool.poetry]
name = "aio-q3-rcon"
version = "1.0.0"
description = "An async Quake 3 RCON implementation with a CLI"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aioq3rcon"}]
repository = "https://github.com/Iapetus-11/aio-q3-rcon"
keywords = ["quake3rcon", "quake3", "rcon", "q3", "q3rcon", "async", "asyncio"]

[tool.poetry.dependencies]
python = "^3.10"
asyncio-dgram = "^2.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
autoflake = "^1.7.5"

[tool.poetry.group.cli.dependencies]
validators = "^0.20.0"
anyio = "^3.6.1"
click = "^8.1.3"

[tool.poetry.scripts]
q3rcon = { callable = "aioq3rcon.cli:rcon", extras = ["cli"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
files = ["aioq3rcon/**/*.py"]
python_version = "3.10"
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
strict = true
